// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledTag renders correctly as secondary and removable 1`] = `
<StyledTag
  className=""
  onClick={null}
  onRemove={null}
  removable={true}
  secondary={true}
  tag="foo"
>
  <StyledTag__Wrapper
    className=""
    onClick={null}
    secondary={true}
  >
    <span
      className="StyledTag__Wrapper-ja2wb4-0 iWktsc"
      onClick={null}
    >
      foo
      <StyledTag__Icon
        onClick={null}
      >
        <_default
          className="StyledTag__Icon-ja2wb4-1 lfRuQJ"
          onClick={null}
        >
          <_default
            className="StyledTag__Icon-ja2wb4-1 lfRuQJ"
            onClick={null}
          >
            <div
              className="StyledTag__Icon-ja2wb4-1 lfRuQJ"
              onClick={null}
            />
          </_default>
        </_default>
      </StyledTag__Icon>
    </span>
  </StyledTag__Wrapper>
</StyledTag>
`;

exports[`StyledTag renders correctly with default values 1`] = `
<StyledTag
  className=""
  onClick={null}
  onRemove={null}
  removable={false}
  secondary={false}
  tag="foo"
>
  <StyledTag__Wrapper
    className=""
    onClick={null}
    secondary={false}
  >
    <span
      className="StyledTag__Wrapper-ja2wb4-0 icisQT"
      onClick={null}
    >
      foo
    </span>
  </StyledTag__Wrapper>
</StyledTag>
`;
